--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -28,49 +28,25 @@
                                 انجام شده</a></li>
                         </ul>
                         <div class="tab-content">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="card project-item">
-                                        <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>
-                                        <span class="header">محلول کشت سلولی <span
-                                                class="sub-header">( 2 ماه قبل )</span></span>
-                                        <span><i class="far fa-envelope"></i> پیام ها </span>
-                                        <span><i class="fas fa-dollar-sign"></i><span>35,000,000</span> ریال </span>
-                                        <span><i
-                                                class="fas fa-hourglass-end"></i><span>8 ماه</span> تا اتمام پروژه</span>
-                                        <button type="button" class="chamran-btn-info">مشاهده</button>
-                                        <button type="button" class="chamran-btn-delete">رد</button>
+                            {% for project in expert_user.experts_applied.all %}
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="card project-item">
+                                            {% if forloop.counter0 == 0 %}
+                                                <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>
+                                            {% endif %}
+                                            <span class="header">{{ project.project_form.project_title_persian }} <span
+                                                    class="sub-header"> ( {{ project.calculate_date_remaining }} قبل ) </span></span>
+                                            <span><i class="far fa-envelope"></i> پیام ها </span>
+                                            <span><i class="fas fa-dollar-sign"></i><span>{{ project.cost_of_project }}</span> ریال </span>
+                                            <span><i
+                                                    class="fas fa-hourglass-end"></i><span>{{ project.calculate_date_past }}</span> تا اتمام پروژه</span>
+                                            <button type="button" class="chamran-btn-info">مشاهده</button>
+                                            <button type="button" class="chamran-btn-delete">رد</button>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="card project-item">
-                                        <span class="header">تولید واکسن اچ پی وی<span
-                                                class="sub-header">( 3 ماه قبل )</span></span>
-                                        <span><i class="far fa-envelope"></i> پیام ها </span>
-                                        <span><i class="fas fa-dollar-sign"></i><span>5,000,000</span> ریال </span>
-                                        <span><i
-                                                class="fas fa-hourglass-end"></i><span>10 روز</span>تا اتمام پروژه </span>
-                                        <button type="button" class="chamran-btn-info">مشاهده</button>
-                                        <button type="button" class="chamran-btn-delete">رد</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="card project-item">
-                                        <span class="header">کیت تشخیصی سرطان<span
-                                                class="sub-header">( 4 ماه قبل )</span></span>
-                                        <span><i class="far fa-envelope"></i> پیام ها </span>
-                                        <span><i class="fas fa-dollar-sign"></i><span>50,000,000</span> ریال </span>
-                                        <span><i
-                                                class="fas fa-hourglass-end"></i><span>2 ساعت</span>تا اتمام پروژه </span>
-                                        <button type="button" class="chamran-btn-info">مشاهده</button>
-                                        <button type="button" class="chamran-btn-delete">رد</button>
-                                    </div>
-                                </div>
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
