--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -35,14 +35,12 @@
     <div class="signUp-div">
         <form method="post" action="" novalidate class="sign-up-ajax" data-url="{% url 'chamran:signup_email' %}">
             <div class="user-type-container">
-{#                                <input type="radio" name="user-type" id="researcher" value="researcher">#}
-{#                                {{ form.account_type.2|attr:"id:researcher" }}#}
-{#                                <label for="researcher" class="user-type researcher text-center">پژوهشگر</label>#}
-{#                                <input type="radio" name="user-type" id="expert" value="expert">#}
-{#                                <label for="expert" class="user-type expert text-center">استاد</label>#}
-{#                                <input type="radio" name="user-type" id="industry" value="industry">#}
-{#                                <label for="industry" class="user-type industry text-center">صنعت</label>#}
-                {{ register_form.account_type }}
+                <input type="radio" name="user-type" id="researcher" value="researcher">
+                <label for="researcher" class="user-type researcher text-center">پژوهشگر</label>
+                <input type="radio" name="user-type" id="expert" value="expert">
+                <label for="expert" class="user-type expert text-center">استاد</label>
+                <input type="radio" name="user-type" id="industry" value="industry">
+                <label for="industry" class="user-type industry text-center">صنعت</label>
 
             </div>
             <div class="email">
