--- a/researcher/templates/researcher/layouts/executive_form.html
+++ b/researcher/templates/researcher/layouts/executive_form.html
@@ -19,12 +19,12 @@
                                 <span class='center-vr'>زمان :</span>
                             </div>
                             <div class='col-lg-5'>
-                                <label for='from'>از تاریخ</label>
-                                <input type='date' id='from' class='w-100' name="start">
+                                <label for='from'>از سال</label>
+                                <input type='text' id='from' class='w-100' name="start">
                             </div>
                             <div class='col-lg-5'>
-                                <label for='until'>تا تاریخ</label>
-                                <input type='date' id='until' class='w-100' name="end">
+                                <label for='until'>تا سال</label>
+                                <input type='text' id='until' class='w-100' name="end">
                             </div>
                         </div>
                         <div class='row'>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <button onclick="executive_record()" class="save-btn" type="submit">افزودن</button>
+                    <button class="save-btn" type="submit">افزودن</button>
                     <button class="reject-btn" type="reset">لغو</button>
                 </div>
             </form>
