--- a/researcher/templates/researcher/layouts/research_form.html
+++ b/researcher/templates/researcher/layouts/research_form.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <button class="save-btn" type="submit" onclick="studious_record()">افزودن</button>
+                    <button class="save-btn" type="submit" >افزودن</button>
                     <button class="reject-btn" type="reset">لغو</button>
                 </div>
             </form>
