--- a/researcher/templates/researcher/layouts/scientific_form.html
+++ b/researcher/templates/researcher/layouts/scientific_form.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <button onclick="scientific_record()" class="save-btn" type="submit" id="submit_button" >افزودن</button>
+                    <button class="save-btn" type="submit" id="submit_button" >افزودن</button>
                     <button class="reject-btn" type="reset">لغو</button>
                 </div>
             </form>
