--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -11,8 +11,9 @@
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
       {% block header %}{% endblock %}
+      <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
       <link rel="stylesheet" href="{% static 'researcher/css/style.css' %}">
-      <link rel="stylesheet" href="{% static 'researcher/css/style_xs.css' %}">
+      <!-- <link rel="stylesheet" href="{% static 'researcher/css/style_xs.css' %}"> -->
   </head>
   <body>
   {% block dialog %}{% endblock %}
@@ -82,9 +83,9 @@
                     </div>
                 </a>
             </li>
-            {#      TODO#}
+            {% url 'researcher:technique' as technique_url %}
             <li class="list-group-item text-right">
-                <a href="#">
+                <a href="{{technique_url}}">
                     <div>
                         <span>تکنیک ها</span>
                         <span class="fas fa-file-medical"></span>
