--- a/researcher/templates/researcher/layouts/technique_review_request.html
+++ b/researcher/templates/researcher/layouts/technique_review_request.html
@@ -4,33 +4,33 @@
         <div class="close"></div>
         <div class="card-head">درخواست ارتقا نمره</div>
         <div class="container">
-            <form method="post" action="">
+            <form method="post" enctype="multipart/form-data" action="{% url 'researcher:technique-review' %}" id="technique_review">
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12">
                         <label for="request-body">توضیحات</label>
-                        <textarea dir="rtl" rows="5" class="w-100" id="request-body" name="request_body"></textarea>
+                        <textarea dir="rtl" rows="5" class="w-100" id="request-body" name="request_body" required></textarea>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12 text-right">
                         <div class="confirmation">
-                            <span class="title">نحوه ثبت تکنیک</span>
+                            <span class="title">نحوه ارتقا نمره</span>
                             <div class="radio-group row">
                                 <div class="form-group col-lg-4 col-md-4">
-                                    <input class="close-upload" type="radio" name="request_confirmation_method" id="request-exam" hidden>
+                                    <input class="close-upload" type="radio" name="request_confirmation_method" id="request-exam" value="exam" required hidden>
                                     <label for="request-exam">
                                         <div class="title">درخواست آزمون آنلاین</div>
                                     </label>
                                 </div>
                                 <div class="form-group col-lg-4 col-md-4">
-                                    <input class="upload-file" type="radio" name="request_confirmation_method" id="request-upload-s" hidden>
+                                    <input class="upload-file" type="radio" name="request_confirmation_method" id="request-upload-s" value="certificate" required hidden>
                                     <label for="request-upload-s">
                                         <div class="title">آپلود گواهی نامه</div>
                                     </label>
                                 </div>
                                 <div class="form-group col-lg-4 col-md-4">
-                                    <input class="upload-file" type="radio" name="request_confirmation_method" id="request-article" hidden>
+                                    <input class="upload-file" type="radio" name="request_confirmation_method" id="request-article" value="paper" required hidden>
                                     <label for="request-article">
                                         <div class="title">آپلود مقاله</div>
                                     </label>
