debug some bugs but not complete!

--- a/templates/registration/email_template.html
+++ b/templates/registration/email_template.html
@@ -8,10 +8,31 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
-<body style="margin: 0; padding: 0;text-align: center">
-<table border="0" cellpadding="0" cellspacing="0" width="50%" style="min-height: 100px;
-    box-shadow: 0px 4px 10px 0 rgba(0,0,0,0.16);
-    border-radius: 0.5em;">
+<body style="box-sizing:border-box;
+             color:#555;
+             font-family:tahoma!important;
+             font-size:16px;
+             font-weight:400;
+             line-height:19px;
+             margin:0;
+             min-width:100%;
+             padding:0;
+             text-align:center;
+             width:100%!important">
+<table style="background:#fff;
+              border-collapse:collapse;
+              border-spacing:0;
+              color:#555;
+              font-family:tahoma!important;
+              font-size:16px;
+              font-weight:400;
+              height:100%;
+              line-height:19px;
+              margin:0;
+              padding:0;
+              text-align:center;
+              vertical-align:top;
+              width:100%">
     <tr>
         <td style="padding: 10px">
             <img src="http://chamranteam.ir/theme-ct/images/logo.png" alt="logo" height="70px">
@@ -93,21 +114,20 @@
         </td>
     </tr>
     <tr>
-        <td>
+        <td style="padding-top: 30px; direction: rtl">
             سلام
+            <br/>
             به چمران تیم خوش آمدید!
         </td>
-        <td>
+    </tr>
+    <tr>
+        <td style="padding-bottom: 30px;direction: rtl">
             {{ message }}
         </td>
     </tr>
     <tr>
-        <td>
-
-        </td>
-    </tr>
-    <tr>
         <td style="background: #f7fdf8">
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
             <ul style="padding: 0;
     margin: 0;
     list-style: none;">
