email_template is ready to use! :D

--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -1,13 +1,9 @@
 {% load static%}
-<div class="dialog-main showProject">
-    <div class="card text-right dialog">
+<div class="fixed-back showProject">
+    <div class="card text-right">
         <div class="close"></div>
+        <div class="card-head"> محلول کشت سلولی ( FBS )</div>
         <div class="container">
-            <div class="row">
-               <div class="col-lg-12">
-                   <h6 class="project-title"> محلول کشت سلولی ( FBS )</h6>
-               </div>
-            </div>
             <div class="row mbottom-lg-30">
                 <div class="col-lg-6">
                     <span class="border-span">محیط کشت سلولی </span>
