email template fixed!

--- a/templates/registration/email_template.html
+++ b/templates/registration/email_template.html
@@ -59,7 +59,7 @@
             </strong>
             خوش آمدید!
             <br/>
-            جهت تکمیل ثبت نام خود به لینک زیر مراجعه نمایید.
+            جهت {{ proper_text }} خود به لینک زیر مراجعه نمایید.
             <br/>
         </td>
     </tr>
